# dt-awslayertool

./: .editorconfig  .gitignore  CloneExtensionHowto.md  ContainerizedLambdaHowto.md  README.md  dev-requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: check.yml  python-publish.yml
docs/: CloneExtensionHowto.md  ContainerizedLambdaHowto.md
scripts/: check.py
src/awslayertool/: app.py
src/dtawslayertool/: version.py
src/dtlayertool/: app.py
tests/: test_cmdline.py  test_mocked_integration.py
