[metadata]
name = awslayertool
version = attr: src.awslayertool.version.__version__
description = awslayertool is a script to download or clone AWS Lambda Layers or extensions.
long_description = file: README.md
license = Apache 2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    boto3~=1.17

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    awslayertool = awlayertool.app:main