[metadata]
name = awslayertool
version = attr: src.awslayertool.version.__version__
description = awslayertool is a script to download or clone AWS Lambda Layers or extensions.
long_description = file: README.md
license = Apache 2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
# We use 3.5 which is not supported anymore upstream.
# Ubuntu 16.04 (LTS) has Python 3.5 and normal support ended just 2021-04-30
python_requires = >= 3.5
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    boto3~=1.17

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    awslayertool = awslayertool.app:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[pylint]
max-line-length = 88

[pylint.messages_control]
# Black takes care of these:
disable = bad-continuation, bad-whitespace

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88