# Copyright 2021 Dynatrace LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = dtlayertool
version = attr: src.dtlayertool.version.__version__
description = dtlayertool is a script to download or clone AWS Lambda Layers or extensions.
long_description = file: README.md, CloneExtensionHowto.md, ContainerizedLambdaHowto.md, LICENSE
long_description_content_type = text/markdown
author = Dynatrace, Inc.
author_email = opensource@dynatrace.com
# url = TODO, Github URL
license = Apache 2
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration
    Topic :: System :: Software Distribution
    Topic :: Utilities
keywords =
    aws
    lambda
    layer
    dynatrace
    cli
    oneagent

[options]
# 3.5 is not supported anymore upstream or by boto3
# Ubuntu 16.04 (LTS) had Python 3.5 and normal support ended just 2021-04-30
python_requires = >= 3.6
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    boto3~=1.17

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dtlayertool = dtlayertool.app:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[pylint]
max-line-length = 88

[pylint.messages_control]
# Black takes care of these:
disable = bad-continuation, bad-whitespace, missing-docstring

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88